...
          <Text
            style={[
              styles.bottomNextText,
              !canProceed && styles.bottomNextTextDisabled
            ]}
          >
            {step < 3 ? 'Continue' : 'Publish'}
          </Text>
        </TouchableOpacity>
      </View>
    </KeyboardAvoidingView>
  );
}
...
