...
  return (
    <View style={styles.container}>
      <Button
        variant="plain"
        onPress={handlePlayPause}
        style={[styles.playButton, { backgroundColor: primaryColor }]}
        testID="asset-audio-play"
        accessibilityLabel="asset-audio-play"
      >
        <Icon
          as={isThisAudioPlaying ? Pause : Play}
          size={24}
          className="text-primary-foreground"
...
